Add a quick & dirty content draft with some basic styles

--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -1,10 +1,89 @@
 ---
-title: Welcome to Middleman
+title: Rails Girls Saint-Etienne
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p>
+<div class="hero">
+  <header class="hero-header">
+    <h1 class="event-name">Rails Girls Saint-Etienne</h1>
+    <h2 class="event-date">23-24 octobre 2015</h2>
+  </header>
+  <div class="scene"></div>
+</div>
+
+<div class="container">
+  <div class="section event-description">
+    <p class="lead">
+      RailsGirls est un atelier gratuit d'une soirée et une journée,
+      durant lesquelles les participantes crééent une application Web
+      complète à l'aide de Ruby on Rails, et de nos fantastiques mentors :)
+    </p>
+
+    <h4>Vous apprendrez</h4>
+    <p>à développer une application web complète avec le technologie Ruby on Rails avec l'aide de nos mentors.</p>
+
+    <h4>Vous avez besoin</h4>
+    <p>d'un ordinateur portable, de la curiosité et d'un brin de créativité.</p>
+  </div>
+
+  <div class="section location">
+    <h3 class="section-header">Lieu</h3>
+    <p>Chez Craftsmen, au Bâtiment des Hautes Technologies, 20 rue Benoît Lauras, Saint-Etienne.</p>
+  </div>
+
+  <div class="section schedule">
+    <h3 class="section-header">Programme</h3>
+    <h3>Vendredi 23 octobre</h3>
+    <h4>Install Party</h4>
+    <p>
+      Faites connaissances avec vos mentors, les autres élèves et... la machine !
+      Amenez votre ordinateur portable, nous installerons Ruby on Rails ensemble.
+    </p>
+
+    <h3>Samedi 24 octobre</h3>
+    <h4>Une journée les mains dans le cambouis (de pixels !)</h4>
+    <p>
+      Les ateliers Rails Girls vous lancent, par petits groupes, dans les premiers pas du développement web.<br>
+      Vous aurez des présentations éclair, découverte du langage, la rencontre avec des personnes qui sont dans la même optique que vous, et bien sûr... du code !
+    </p>
+    <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos des RailsGirls de Berlin, Cracovie et Singapour.</p>
+  </div>
+
+  <div class="section sponsors">
+    <h3 class="section-header">Sponsors</h3>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
+
+  <div class="section faq">
+    <h3 class="section-header">Questions fréquentes</h3>
+    <p>
+      <strong>Combien ça coûte ?</strong>
+      C'est gratuit pour les curieuses, les intéressées, les créatrices... :)
+    </p>
+    <p>
+      <strong>Pour qui ?</strong>
+  	  Les femmes de tous les âges, avec une connaissance basique des ordinateurs.
+  	  Aucune expérience Web ou de programmation n'est requise, nous avons tous les niveaux.
+  	  Merci d'apporter votre ordinateur portable pour programmer !
+    </p>
+    <p>
+      <strong>Il y a une sélection ?</strong>
+	    Si nous atteignons le maximum de places ou qu'il y a plus de 4 ou 5 élèves par mentor,
+	    nous nous réservons le droit de sélectionner : les femmes et les débutants d'abord :)
+    </p>
+    <p>
+      <strong>Et les hommes ?</strong>
+	    Ils peuvent venir, s'il reste de la place, et de préférence accompagnés par une demoiselle motivée.
+    </p>
+    <p>
+      <strong>Je peux vous aider ?</strong>
+      Plus on est de mentors plus on rit :)
+      Manifestez-vous auprès de <a href="http://twitter.com/WebEnVert">@WebEnVert</a> sur Twitter !
+    </p>
+  </div>
+</div>
+
+<div class="footer">
+  <p>Get excited and make things!</p>
 </div>
