--- a/source/layouts/application.html.erb
+++ b/source/layouts/application.html.erb
@@ -1,16 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Always force latest IE rendering engine or request Chrome Frame -->
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <title><%= current_page.data.title || 'Rails Girls Saint-Etienne' %></title>
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
-
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag  "application" %>
+    <%= stylesheet_link_tag 'application' %>
+    <%= javascript_include_tag  'application' %>
   </head>
 
   <body class="<%= page_classes %>">
