--- a/source/assets/stylesheets/base/_grid-settings.scss
+++ b/source/assets/stylesheets/base/_grid-settings.scss
@@ -1,14 +1,8 @@
 @import "neat-helpers"; // or "../neat/neat-helpers" when not in Rails
 
-// Neat Overrides
-// $column: 90px;
-// $gutter: 30px;
-// $grid-columns: 12;
-// $max-width: 1200px;
+$column: modular-scale(3, 1em, $golden);
+$gutter: modular-scale(1, 1em, $golden);
+$grid-columns: 12;
+$max-width: 1080px;
 
-// Neat Breakpoints
-$medium-screen: 600px;
-$large-screen: 900px;
-
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+//$visual-grid: true;
