--- a/source/assets/stylesheets/base/_typography.scss
+++ b/source/assets/stylesheets/base/_typography.scss
@@ -14,6 +14,7 @@ h5,
 h6 {
   font-family: $heading-font-family;
   font-size: $base-font-size;
+  font-weight: 600;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
 }
