--- a/source/layouts/application.html.erb
+++ b/source/layouts/application.html.erb
@@ -8,6 +8,8 @@
 
     <%= stylesheet_link_tag 'application' %>
     <%= javascript_include_tag  'application' %>
+    <script src="https://use.typekit.net/tqz5lih.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
 
   <body class="<%= page_classes %>">
