Add Rails Girls' sketches to the hero section as an image

--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -7,7 +7,7 @@ title: Rails Girls Saint-Etienne
     <h1 class="event-name">Rails Girls Saint-Etienne</h1>
     <h2 class="event-date">23-24 octobre 2015</h2>
   </header>
-  <div class="scene"></div>
+  <div class="scene"><%= image_tag 'hero-header.png' %></div>
 </div>
 
 <div class="container">
@@ -36,15 +36,13 @@ title: Rails Girls Saint-Etienne
 
   <div id="schedule" class="section schedule">
     <h3 class="section-header"> Au programme</h3>
-    <h3>Vendredi 23 octobre</h3>
-    <h4>Install Party</h4>
+    <h4>Vendredi 23 octobre : Install Party</h4>
     <p>
       Faites connaissances avec vos mentors, les autres élèves et... la machine !
       Amenez votre ordinateur portable, nous installerons Ruby on Rails ensemble.
     </p>
 
-    <h3>Samedi 24 octobre</h3>
-    <h4>Une journée les mains dans le cambouis (de pixels !)</h4>
+    <h4>Samedi 24 octobre : Une journée les mains dans le cambouis (de pixels !)</h4>
     <p>
       Les ateliers Rails Girls vous lancent, par petits groupes, dans les premiers pas du développement web.<br>
       Vous aurez des présentations éclair, découverte du langage, la rencontre avec des personnes qui sont dans la même optique que vous, et bien sûr... du code !
