Add Eventbrite tickets IFrame and a hero CTA

--- a/source/assets/stylesheets/_landing.scss
+++ b/source/assets/stylesheets/_landing.scss
@@ -20,6 +20,16 @@
   font-size: modular-scale(3);
 }
 
+.cta-tickets {
+  background-color: shade($action-color, 25%);
+  font-size: modular-scale(0);
+
+  &:hover {
+    background-color: #fff;
+    color: $action-color;
+  }
+}
+
 .container {
   @include outer-container;
 }
