--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -6,6 +6,7 @@ title: Rails Girls Saint-Etienne
   <header class="hero-header">
     <h1 class="event-name">Rails Girls Saint-Etienne</h1>
     <h2 class="event-date">23-24 octobre 2015</h2>
+    <a href="#tickets" class="cta-tickets button">Inscrivez-vous</a>
   </header>
   <div class="scene"><%= image_tag 'hero-header.png' %></div>
 </div>
@@ -34,8 +35,16 @@ title: Rails Girls Saint-Etienne
     </div>
   </div>
 
-  <div id="schedule" class="section schedule">
-    <h3 class="section-header"> Au programme</h3>
+
+  <div id="tickets" class="section tickets">
+    <h3 class="section-header">Tickets</h3>
+    <div>
+      <iframe src="//eventbrite.fr/tickets-external?eid=7208208947&ref=etckt" frameborder="0" height="300" width="100%" vspace="0" hspace="0" allowtransparency="true"></iframe>
+    </div>
+  </div>
+
+  <div class="section schedule">
+    <h3 class="section-header">Au programme</h3>
     <h4>Vendredi 23 octobre : Install Party</h4>
     <p>
       Faites connaissances avec vos mentors, les autres élèves et... la machine !
