Add links to the organizers and railsgirls.com in the footer

--- a/source/assets/stylesheets/_landing.scss
+++ b/source/assets/stylesheets/_landing.scss
@@ -110,4 +110,9 @@
     font-size: modular-scale(-1);
     margin-bottom: 0;
   }
+
+  a {
+    color: $medium-gray;
+    text-decoration: underline;
+  }
 }
