--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -117,6 +117,6 @@ title: Rails Girls Saint-Etienne
 </div>
 
 <div class="footer">
-  <p>Shaped by the fine ladies and gentlemen from Web en Vert & Craftsmen.</p>
-  <p>Get excited and make things!</p>
+  <p>Shaped by the fine ladies and gentlemen from <%= link_to 'Web en Vert', 'http://webenvert.fr' %> & <%= link_to 'Craftsmen', 'http://craftsmen.io' %>.</p>
+  <p><%= link_to 'Get excited and make things!', 'http://railsgirls.com' %></p>
 </div>
