Add links to the mentioned Rails Girls events in other cities

--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -56,7 +56,7 @@ title: Rails Girls Saint-Etienne
       Les ateliers Rails Girls vous lancent, par petits groupes, dans les premiers pas du développement web.<br>
       Vous aurez des présentations éclair, découverte du langage, la rencontre avec des personnes qui sont dans la même optique que vous, et bien sûr... du code !
     </p>
-    <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos des RailsGirls de Berlin, Cracovie et Singapour.</p>
+    <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos des RailsGirls de <%= link_to 'Berlin', 'http://railsgirls.com/berlin' %>, <%= link_to 'Cracovie', 'http://railsgirls.com/krakow' %> et <%= link_to 'Singapour', 'http://railsgirls.com/singapore' %>.</p>
   </div>
 
 
