--- a/source/assets/stylesheets/_landing.scss
+++ b/source/assets/stylesheets/_landing.scss
@@ -76,36 +76,10 @@
   }
 }
 
-.newsletter {
-
-  label {
-    font-weight: 500;
-  }
-
-  input {
-    font-size: modular-scale(0);
-    display: inline-block;
-
-    &[type="email"] {
-      line-height: 1;
-      margin-bottom: 0;
-      margin-right: 1em;
-      padding: $small-spacing 0.5em;
-      width: flex-grid(8);
-    }
-
-    &[type="submit"] {
-      border: 1px solid $action-color;
-      vertical-align: baseline;
-    }
-  }
-}
-
 .footer {
-  background-color: mix($dark-gray, $action-color, 95%);
+  background-color: mix($dark-gray, $action-color, 98%);
   color: $medium-gray;
-  padding: $base-spacing;
-  text-align: center;
+  padding: $base-spacing 0 $base-spacing * 3;
 
   p {
     font-size: modular-scale(-1);
@@ -115,5 +89,40 @@
   a {
     color: $medium-gray;
     text-decoration: underline;
+  }
+}
+
+.credits {
+  @include span-columns(7);
+}
+
+.newsletter {
+  @include span-columns(5);
+
+  label {
+    font-size: modular-scale(-1);
+    font-weight: 500;
+  }
+
+  input {
+    font-size: modular-scale(-1);
+    display: inline-block;
+
+    &[type="email"] {
+      background-color: transparent;
+      border-color: $medium-gray;
+      line-height: 1;
+      margin-bottom: 0;
+      margin-right: 1em;
+      padding: $small-spacing 0.5em;
+      width: 60%;
+    }
+
+    &[type="submit"] {
+      background-color: $medium-gray;
+      border: 1px solid $medium-gray;
+      color: $base-font-color;
+      vertical-align: baseline;
+    }
   }
 }
