--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -10,7 +10,7 @@ title: Rails Girls Saint-Etienne
   </header>
 </div>
 
-<div class="container">
+<main class="container" role="main">
   <div class="section event-description">
     <p class="intro">
       RailsGirls est un atelier gratuit d'une soirée et une journée,
@@ -103,19 +103,23 @@ title: Rails Girls Saint-Etienne
       Vous pouvez également nous aider en sponsorisant l'événement.
     </p>
   </div>
-
-  <div class="section newsletter">
-    <form action="//craftsmen.us7.list-manage.com/subscribe/post?u=aee53628420c3051e5f7dcc23&amp;id=911d928859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <label for="mce-EMAIL">Restez informées : inscrivez-vous à notre newsletter</label>
-      <input type="email" value="" name="EMAIL" placeholder="Votre adresse email..." id="mce-EMAIL">
-      <input type="submit" value="Je m'abonne" name="subscribe" id="mc-embedded-subscribe">
-       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;"><input type="text" name="b_aee53628420c3051e5f7dcc23_911d928859" tabindex="-1" value=""></div>
-    </form>
-  </div>
-</div>
+</main>
 
 <div class="footer">
-  <p>Shaped by the fine ladies and gentlemen from <%= link_to 'Web en Vert', 'http://webenvert.fr' %> & <%= link_to 'Craftsmen', 'http://craftsmen.io' %>.</p>
-  <p><%= link_to 'Get excited and make things!', 'http://railsgirls.com' %></p>
+  <div class="container">
+    <div class="credits">
+      <p>Shaped by the fine ladies and gentlemen from <%= link_to 'Web en Vert', 'http://webenvert.fr' %> & <%= link_to 'Craftsmen', 'http://craftsmen.io' %>.</p>
+      <p><%= link_to 'Get excited and make things!', 'http://railsgirls.com' %></p>
+    </div>
+
+    <div class="newsletter">
+      <form action="//craftsmen.us7.list-manage.com/subscribe/post?u=aee53628420c3051e5f7dcc23&amp;id=911d928859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <label for="mce-EMAIL">Restez informées en vous inscrivant à notre newsletter</label>
+        <input type="email" value="" name="EMAIL" placeholder="Votre adresse email..." id="mce-EMAIL">
+        <input type="submit" value="Je m'abonne" name="subscribe" id="mc-embedded-subscribe">
+         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_aee53628420c3051e5f7dcc23_911d928859" tabindex="-1" value=""></div>
+      </form>
+    </div>
+  </div>
 </div>
