--- a/source/assets/stylesheets/_landing.scss
+++ b/source/assets/stylesheets/_landing.scss
@@ -1,13 +1,14 @@
 .hero {
   background-color: $action-color;
   color: #fff;
-  height: 480px;
   padding-top: $base-spacing;
 }
 
-.hero-header,
-.scene {
+.hero-header {
   @include outer-container;
+
+  background: image-url("hero-header.png") left 0 bottom 1.5em no-repeat;
+  height: 460px;
 }
 
 .event-name {
