--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -8,7 +8,6 @@ title: Rails Girls Saint-Etienne
     <h2 class="event-date">23-24 octobre 2015</h2>
     <a href="#tickets" class="cta-tickets button">Inscrivez-vous</a>
   </header>
-  <div class="scene"><%= image_tag 'hero-header.png' %></div>
 </div>
 
 <div class="container">
@@ -19,7 +18,7 @@ title: Rails Girls Saint-Etienne
       complète à l'aide de Ruby on Rails, et de nos fantastiques mentors :)
     </p>
 
-    <div id="benefits" class="benefits">
+    <div class="benefits">
       <h4>Vous apprendrez</h4>
       <p>à développer une application web complète avec la technologie Ruby on Rails avec l'aide de nos mentors.</p>
     </div>
@@ -84,18 +83,18 @@ title: Rails Girls Saint-Etienne
     </p>
     <p>
       <strong>Pour qui ?</strong>
-  	  Les femmes de tous les âges, avec une connaissance basique des ordinateurs.
-  	  Aucune expérience Web ou de programmation n'est requise, nous avons tous les niveaux.
-  	  Merci d'apporter votre ordinateur portable pour programmer !
+      Les femmes de tous les âges, à l’aise avec l’outil informatique.
+      Aucune expérience Web ou de programmation n'est requise, nous avons tous les niveaux.
+      Merci d'apporter votre ordinateur portable pour programmer !
     </p>
     <p>
       <strong>Il y a une sélection ?</strong>
-	    Si nous atteignons le maximum de places ou qu'il y a plus de 4 ou 5 élèves par mentor,
-	    nous nous réservons le droit de sélectionner : les femmes et les débutants d'abord :)
+      Si nous atteignons le maximum de places ou qu'il y a plus de 4 ou 5 élèves par mentor,
+      nous nous réservons le droit de sélectionner : les femmes et les débutants d'abord :)
     </p>
     <p>
       <strong>Et les hommes ?</strong>
-	    Ils peuvent venir, s'il reste de la place, et de préférence accompagnés par une demoiselle motivée.
+      Ils peuvent venir, s'il reste de la place, et de préférence accompagnés par une demoiselle motivée.
     </p>
     <p>
       <strong>Je peux vous aider ?</strong>
@@ -107,7 +106,7 @@ title: Rails Girls Saint-Etienne
 
   <div class="section newsletter">
     <form action="//craftsmen.us7.list-manage.com/subscribe/post?u=aee53628420c3051e5f7dcc23&amp;id=911d928859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <label for="mce-EMAIL">Restez informées : inscrivez-vous à notre newsletter </label>
+      <label for="mce-EMAIL">Restez informées : inscrivez-vous à notre newsletter</label>
       <input type="email" value="" name="EMAIL" placeholder="Votre adresse email..." id="mce-EMAIL">
       <input type="submit" value="Je m'abonne" name="subscribe" id="mc-embedded-subscribe">
        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
