--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -58,11 +58,15 @@ title: Rails Girls Saint-Etienne
     <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos des RailsGirls de <%= link_to 'Berlin', 'http://railsgirls.com/berlin' %>, <%= link_to 'Cracovie', 'http://railsgirls.com/krakow' %> et <%= link_to 'Singapour', 'http://railsgirls.com/singapore' %>.</p>
   </div>
 
-
   <div class="section location">
     <h3 class="section-header">Lieu</h3>
-    <p>Chez Craftsmen, au Bâtiment des Hautes Technologies, 20 rue Benoît Lauras, Saint-Etienne.</p>
-    <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/mehlah.nfmb7h36/attribution,zoompan.html?access_token=pk.eyJ1IjoibWVobGFoIiwiYSI6IlFYOVpsVkkifQ.0R__h2wpwHGkLtuC-JtqIw'></iframe>
+    <p>L'install party et la journée Rails Girls se dérouleront chez Craftsmen, au Bâtiment des Hautes Technologies,<br>20 rue Benoît Lauras, Saint-Etienne.</p>
+    <p>Un <strong>parcking gratuit</strong> sera disponible.</p>
+    <p>En <strong>tramway</strong>, descendez à l'arrêt Chaléassière puis marchez 5 minutes.</p>
+    <p>Si vous êtes perdu(e), vous pouvez toujours appeler Mehdi au <a href="tel:+33642755592">06 42 75 55 92</a>.</p>
+    <div class="location-map">
+      <iframe width='100%' height='400px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/mehlah.nfmb7h36/attribution,zoompan.html?access_token=pk.eyJ1IjoibWVobGFoIiwiYSI6IlFYOVpsVkkifQ.0R__h2wpwHGkLtuC-JtqIw'></iframe>
+    </div>
   </div>
 
   <div class="section sponsors">
