Add a code of conduct for the event

--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -107,6 +107,11 @@ title: Rails Girls Saint-Etienne
       Vous pouvez également nous aider en sponsorisant l'événement.
     </p>
   </div>
+
+  <div class="section coc">
+    <h3 class="section-header">Code de conduite</h3>
+    <p>En participant à Rails Girls Lyon, les participants, mentors, sponsors, organisateurs, et volontaires s'engagent à respecter le <%= link_to 'code de conduite', 'coc' %>.</p>
+  </div>
 </main>
 
 <div class="footer">
