--- a/source/views/coc.html.erb
+++ b/source/views/coc.html.erb
@@ -3,6 +3,10 @@ title: Rails Girls Saint-Etienne
 ---
 
 <div class="container">
+  <nav class="go-to-root">
+    <%= link_to '← Retour sur le site Rails Girls Saint-Etienne', '/' %>
+  </nav>
+
   <h1>Code de conduite pour Rails Girls Saint-Etienne</h1>
 
   <p>Tous les participants, mentors, sponsors, organisateurs, et volontaires à notre
