--- a/source/views/press.html.erb
+++ b/source/views/press.html.erb
@@ -3,6 +3,10 @@ title: Rails Girls Saint-Etienne
 ---
 
 <div class="container">
+  <nav class="go-to-root">
+    <%= link_to '← Retour sur le site Rails Girls Saint-Etienne', '/' %>
+  </nav>
+
   <h1>Communiqué de presse</h1>
 
   <main class="press-release">
