--- a/source/views/coc.html.erb
+++ b/source/views/coc.html.erb
@@ -4,7 +4,7 @@ title: Rails Girls Saint-Etienne
 
 <div class="container">
   <nav class="go-to-root">
-    <%= link_to '← Retour sur le site Rails Girls Saint-Etienne', '/' %>
+    <%= link_to '← Retour sur le site Rails Girls Saint-Etienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
   </nav>
 
   <h1>Code de conduite pour Rails Girls Saint-Etienne</h1>
