Yes, they are fresh, but they are not mentos
Minor typo fix.

--- a/source/views/press.html.erb
+++ b/source/views/press.html.erb
@@ -18,7 +18,7 @@ title: Rails Girls Saint-Etienne
     <p>
       Ce 23-24 octobre se déroule le premier Rails Girls stéphanois, un événement gratuit d'une soirée et une journée,
       destiné prioritairement à des femmes de tous les âges et horizons, durant lequel elles crééent une application Web complète,
-      aidées par nos fantastiques mentos.
+      aidées par nos fantastiques mentors.
     </p>
 
     <p>
