s/Saint-Etienne/Saint-Étienne :ok_hand:

--- a/source/layouts/application.html.erb
+++ b/source/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= current_page.data.title || 'Rails Girls Saint-Etienne' %></title>
+    <title><%= current_page.data.title || 'Rails Girls Saint-Étienne' %></title>
 
     <%= stylesheet_link_tag 'application' %>
     <%= javascript_include_tag  'application' %>
