--- a/source/views/coc.html.erb
+++ b/source/views/coc.html.erb
@@ -1,13 +1,13 @@
 ---
-title: Rails Girls Saint-Etienne
+title: Rails Girls Saint-Étienne
 ---
 
 <div class="container">
   <nav class="go-to-root">
-    <%= link_to '← Retour sur le site Rails Girls Saint-Etienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
+    <%= link_to '← Retour sur le site Rails Girls Saint-Étienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
   </nav>
 
-  <h1>Code de conduite pour Rails Girls Saint-Etienne</h1>
+  <h1>Code de conduite pour Rails Girls Saint-Étienne</h1>
 
   <p>Tous les participants, mentors, sponsors, organisateurs, et volontaires à notre
   événement doivent accepter le code de conduite suivant, ainsi que les règles de conduite du bâtiment qui nous accueille.
