--- a/source/views/press.html.erb
+++ b/source/views/press.html.erb
@@ -1,10 +1,10 @@
 ---
-title: Rails Girls Saint-Etienne
+title: Rails Girls Saint-Étienne
 ---
 
 <div class="container">
   <nav class="go-to-root">
-    <%= link_to '← Retour sur le site Rails Girls Saint-Etienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
+    <%= link_to '← Retour sur le site Rails Girls Saint-Étienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
   </nav>
 
   <h1>Communiqué de presse</h1>
@@ -13,7 +13,7 @@ title: Rails Girls Saint-Etienne
 
     <h2>Rails Girls : une application Web en un jour, c'est possible !</h2>
 
-    <p>Saint-Etienne le 23 septembre 2015.</p>
+    <p>Saint-Étienne le 23 septembre 2015.</p>
 
     <p>
       Ce 23-24 octobre se déroule le premier Rails Girls stéphanois, un événement gratuit d'une soirée et une journée,
@@ -22,7 +22,7 @@ title: Rails Girls Saint-Etienne
     </p>
 
     <p>
-      Nous souhaitons étendre à la ville de Saint-Etienne l’initiative de l’association Rails Girls : doter les femmes (mais pas que)
+      Nous souhaitons étendre à la ville de Saint-Étienne l’initiative de l’association Rails Girls : doter les femmes (mais pas que)
       d’outils leur permettant de (mieux) comprendre les nouvelles technologies et de mettre celles-ci à profit
       pour développer et porter leurs idées.
     </p>
