--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -1,10 +1,10 @@
 ---
-title: Rails Girls Saint-Etienne
+title: Rails Girls Saint-Étienne
 ---
 
 <div class="hero">
   <header class="hero-header">
-    <h1 class="event-name">Rails Girls Saint-Etienne</h1>
+    <h1 class="event-name">Rails Girls Saint-Étienne</h1>
     <h2 class="event-date">23-24 octobre 2015</h2>
     <a href="#tickets" class="cta-tickets button">Inscrivez-vous</a>
   </header>
@@ -60,7 +60,7 @@ title: Rails Girls Saint-Etienne
 
   <div class="section location">
     <h3 class="section-header">Lieu</h3>
-    <p>L'install party et la journée Rails Girls se dérouleront chez Craftsmen, au Bâtiment des Hautes Technologies,<br>20 rue Benoît Lauras, Saint-Etienne.</p>
+    <p>L'install party et la journée Rails Girls se dérouleront chez Craftsmen, au Bâtiment des Hautes Technologies,<br>20 rue Benoît Lauras, Saint-Étienne.</p>
     <p>Un <strong>parcking gratuit</strong> sera disponible.</p>
     <p>En <strong>tramway</strong>, descendez à l'arrêt Chaléassière puis marchez 5 minutes.</p>
     <p>Si vous êtes perdu(e), vous pouvez toujours appeler Mehdi au <a href="tel:+33642755592">06 42 75 55 92</a>.</p>
