Typo and grammar fixes thanks to @ygbillet

--- a/source/views/press.html.erb
+++ b/source/views/press.html.erb
@@ -17,7 +17,7 @@ title: Rails Girls Saint-Étienne
 
     <p>
       Ce 23-24 octobre se déroule le premier Rails Girls stéphanois, un événement gratuit d'une soirée et une journée,
-      destiné prioritairement à des femmes de tous les âges et horizons, durant lequel elles crééent une application Web complète,
+      destiné prioritairement à des femmes de tous les âges et horizons, durant lequel elles créent une application Web complète,
       aidées par nos fantastiques mentors.
     </p>
 
@@ -57,7 +57,7 @@ title: Rails Girls Saint-Étienne
 
     <p>
       Comprendre ce qui se passe derrière un écran n'est pas réservé aux curieux, c'est déjà nécessaire à toute vie professionnelle et citoyenne.<br>
-      Au-delà du code, les enjeux sont parfois plus simples mais plus graves : ce site est-il sécurisé ? Cet email est-il légitime ? Que puis-je mettre sur les réseaux sociaux et que dois-je éviter ?<br>
+      Au-delà du code, les enjeux sont parfois plus simples, mais plus graves : ce site est-il sécurisé ? Cet email est-il légitime ? Que puis-je mettre sur les réseaux sociaux et que dois-je éviter ?<br>
       Si je vote sur une machine électronique, pourra-t-elle être piratée ? (oui, probablement) Pourra-t-on vérifier les résultats avec fiabilité ? (non, certainement pas)
     </p>
 
