Fix copypasta s/Lyon/Saint-Étienne

--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -110,7 +110,7 @@ title: Rails Girls Saint-Étienne
 
   <div class="section coc">
     <h3 class="section-header">Code de conduite</h3>
-    <p>En participant à Rails Girls Lyon, les participants, mentors, sponsors, organisateurs, et volontaires s'engagent à respecter le <%= link_to 'code de conduite', 'coc' %>.</p>
+    <p>En participant à Rails Girls Saint-Étienne, les participants, mentors, sponsors, organisateurs, et volontaires s'engagent à respecter le <%= link_to 'code de conduite', 'coc' %>.</p>
   </div>
 </main>
 
