Replace the default GH Pages URL by `railsgirls.webenvert.fr`

--- a/source/views/coc.html.erb
+++ b/source/views/coc.html.erb
@@ -4,7 +4,7 @@ title: Rails Girls Saint-Étienne
 
 <div class="container">
   <nav class="go-to-root">
-    <%= link_to '← Retour sur le site Rails Girls Saint-Étienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
+    <%= link_to '← Retour sur le site Rails Girls Saint-Étienne', 'http://railsgirls.webenvert.fr' %>
   </nav>
 
   <h1>Code de conduite pour Rails Girls Saint-Étienne</h1>
