--- a/source/views/press.html.erb
+++ b/source/views/press.html.erb
@@ -4,7 +4,7 @@ title: Rails Girls Saint-Étienne
 
 <div class="container">
   <nav class="go-to-root">
-    <%= link_to '← Retour sur le site Rails Girls Saint-Étienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %>
+    <%= link_to '← Retour sur le site Rails Girls Saint-Étienne', 'http://railsgirls.webenvert.fr' %>
   </nav>
 
   <h1>Communiqué de presse</h1>
@@ -83,7 +83,7 @@ title: Rails Girls Saint-Étienne
     <p>Gratuit, grâce à nos généreux sponsors !</p>
 
     <h3 class="section-header">Infos pratiques</h3>
-    <p><strong>Site officiel et inscriptions</strong><br><%= link_to 'http://craftmsen.github.io/railsgirls-saintetienne', 'http://craftsmen.github.io/railsgirls-saintetienne' %></p>
+    <p><strong>Site officiel et inscriptions</strong><br><%= link_to 'http://railsgirls.webenvert.fr', 'http://railsgirls.webenvert.fr' %></p>
     <p><strong>Contact presse</strong><br>Mehdi Lahmam <a href="mailto:mehdi@craftsmen.io">mehdi@craftsmen.io</a></p>
     <p><strong>Twitter</strong><br><%= link_to '@RailsGirlsStE', 'http://twitter.com/railsgirlsste' %></p>
 
