--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -6,7 +6,8 @@ title: Rails Girls Saint-Étienne
   <header class="hero-header">
     <h1 class="event-name">Rails Girls Saint-Étienne</h1>
     <h2 class="event-date">23-24 octobre 2015</h2>
-    <a href="#tickets" class="cta-tickets button">Inscrivez-vous</a>
+    <a href="#tickets" class="cta-tickets button show-on-large">Inscrivez-vous</a>
+    <a href="https://www.eventbrite.fr/e/inscription-rails-girls-saint-etienne-7208208947?aff=es2" class="cta-tickets button show-on-small">Inscrivez-vous</a>
   </header>
 </div>
 
@@ -39,6 +40,7 @@ title: Rails Girls Saint-Étienne
     <h3 class="section-header">Tickets</h3>
     <div>
       <iframe src="//eventbrite.fr/tickets-external?eid=7208208947&ref=etckt" frameborder="0" height="300" width="100%" vspace="0" hspace="0" allowtransparency="true"></iframe>
+      <a href="https://www.eventbrite.fr/e/inscription-rails-girls-saint-etienne-7208208947?aff=es2" class="cta-tickets button show-on-small">Inscrivez-vous</a>
     </div>
   </div>
 
