--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -4,7 +4,7 @@ title: Rails Girls Saint-Étienne
 
 <div class="hero">
   <header class="hero-header">
-    <h1 class="event-name">Rails Girls Saint-Étienne</h1>
+    <h1 class="event-name">Rails Girls <span>St‑Étienne</span></h1>
     <h2 class="event-date">23-24 octobre 2015</h2>
     <a href="#tickets" class="cta-tickets button">Inscrivez-vous</a>
   </header>
