--- a/source/assets/stylesheets/_layout.scss
+++ b/source/assets/stylesheets/_layout.scss
@@ -7,7 +7,8 @@
   @include outer-container;
 
   @include media($small-screen) {
-    padding: 0 10px;
+    padding-left: 1em;
+    padding-right: 1em;
   }
 }
 
