--- a/source/views/index.html.erb
+++ b/source/views/index.html.erb
@@ -72,9 +72,10 @@ title: Rails Girls Saint-Étienne
   <div class="section sponsors">
     <h3 class="section-header">Sponsors</h3>
     <ul class="sponsors-grid">
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
+      <li><%= link_to image_tag('lyon-jug-logo.jpg'), 'http://www.lyonjug.org/' %></li>
+      <li><%= link_to image_tag('leadbtp-logo.jpg'), 'http://www.leadbtp.com/' %></li>
+      <li><%= link_to image_tag('lewagon-logo.jpg'), 'http://www.lewagon.org/' %></li>
+      <li><%= link_to image_tag('1dlab-logo.jpg'), 'http://1d-lab.eu/' %></li>
     </ul>
     <p>Vous souhaitez nous aider ? <a href="mailto:mehdi@craftsmen.io">Contactez-nous !</a></p>
   </div>
