Various copy updates for 2016 event

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@ title: Rails Girls Saint-Étienne
 <div class="hero">
   <header class="hero-header">
     <h1 class="event-name">Rails Girls <span>St‑Étienne</span></h1>
-    <h2 class="event-date">23-24 octobre 2015</h2>
+    <h2 class="event-date">25-26 novembre 2016</h2>
     <a href="#tickets" class="cta-tickets button">Inscrivez-vous</a>
   </header>
 </div>
@@ -20,12 +20,12 @@ title: Rails Girls Saint-Étienne
 
     <div class="benefits">
       <h4>Vous apprendrez</h4>
-      <p>à développer une application web complète avec la technologie Ruby on Rails avec l'aide de nos mentors.</p>
+      <p>à développer une application Web complète avec l'aide de nos mentors et au framework Ruby on Rails.</p>
     </div>
 
     <div class="requirements">
       <h4>Vous avez besoin</h4>
-      <p>d'aucune expérience Web ou de programmation, uniquement d'un ordinateur portable, de la curiosité et d'un brin de créativité.</p>
+      <p>d'uniquement un ordinateur portable, de la curiosité et d'un brin de créativité. Aucune expérience en programmation n'est nécessaire.</p>
     </div>
 
     <div class="help-us">
@@ -38,29 +38,29 @@ title: Rails Girls Saint-Étienne
   <div id="tickets" class="section tickets">
     <h3 class="section-header">Tickets</h3>
     <div>
-      <iframe src="//eventbrite.fr/tickets-external?eid=7208208947&ref=etckt" frameborder="0" height="300" width="100%" vspace="0" hspace="0" allowtransparency="true"></iframe>
+      <iframe src="//eventbrite.fr/tickets-external?eid=28647208572&ref=etckt" frameborder="0" height="375" width="100%" vspace="0" hspace="0" allowtransparency="true"></iframe>
     </div>
   </div>
 
   <div class="section schedule">
     <h3 class="section-header">Au programme</h3>
-    <h4>Vendredi 23 octobre de 19h à 21h : Install Party</h4>
+    <h4>Vendredi 25 novembre de 19h à 21h : Install Party</h4>
     <p>
       Faites connaissance avec vos mentors, les autres élèves et... la machine !
       Amenez votre ordinateur portable, nous installerons Ruby on Rails ensemble.
     </p>
 
-    <h4>Samedi 24 octobre de 9h à 17h : Une journée les mains dans le cambouis (de pixels !)</h4>
+    <h4>Samedi 26 novembre de 9h à 18h : Une journée les mains dans le cambouis (de pixels !)</h4>
     <p>
-      Les ateliers Rails Girls vous lancent, par petits groupes, dans les premiers pas du développement web.<br>
+      Les ateliers Rails Girls vous lancent, par petits groupes, dans les premiers pas du développement Web.<br>
       Vous aurez des présentations éclair, découverte du langage, la rencontre avec des personnes qui sont dans la même optique que vous, et bien sûr... du code !
     </p>
-    <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos des Rails Girls de <%= link_to 'Berlin', 'http://railsgirls.com/berlin' %>, <%= link_to 'Cracovie', 'http://railsgirls.com/krakow' %> et <%= link_to 'Singapour', 'http://railsgirls.com/singapore' %>.</p>
+    <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos de <%= link_to 'la précédente édition', 'flic.kr/s/aHskp9Kri3 ' %>, ou celles de <%= link_to 'Berlin', 'http://railsgirls.com/berlin' %>, <%= link_to 'Cracovie', 'http://railsgirls.com/krakow' %> et <%= link_to 'Singapour', 'http://railsgirls.com/singapore' %>.</p>
   </div>
 
   <div class="section location">
     <h3 class="section-header">Lieu</h3>
-    <p>L'install party et la journée Rails Girls auront lieu chez Craftsmen, au Bâtiment des Hautes Technologies,<br>20 rue Benoît Lauras, Saint-Étienne.</p>
+    <p>L'install party et la journée Rails Girls auront lieu au Bâtiment des Hautes Technologies,<br>20 rue Benoît Lauras, Saint-Étienne.</p>
     <p>En <strong>voiture</strong>, un parking gratuit sera disponible.</p>
     <p>En <strong>tramway</strong>, descendez à l'arrêt Chaléassière puis marchez 5 minutes.</p>
     <p>Si vous êtes perdu(e), vous pouvez toujours appeler Mehdi au <a href="tel:+33642755592">06 42 75 55 92</a>.</p>
@@ -72,10 +72,10 @@ title: Rails Girls Saint-Étienne
   <div class="section sponsors">
     <h3 class="section-header">Sponsors</h3>
     <ul class="sponsors-grid">
-      <li><%= link_to image_tag('lyon-jug-logo.jpg'), 'http://www.lyonjug.org/' %></li>
-      <li><%= link_to image_tag('leadbtp-logo.jpg'), 'http://www.leadbtp.com/' %></li>
-      <li><%= link_to image_tag('lewagon-logo.jpg'), 'http://www.lewagon.org/' %></li>
-      <li><%= link_to image_tag('1dlab-logo.jpg'), 'http://1d-lab.eu/' %></li>
+      <li><%= image_tag 'http://placehold.it/300x150' %></li>
+      <li><%= image_tag 'http://placehold.it/300x150' %></li>
+      <li><%= image_tag 'http://placehold.it/300x150' %></li>
+      <li><%= image_tag 'http://placehold.it/300x150' %></li>
     </ul>
     <p>Vous souhaitez nous aider ? <a href="mailto:mehdi@craftsmen.io">Contactez-nous !</a></p>
   </div>
@@ -83,18 +83,18 @@ title: Rails Girls Saint-Étienne
   <div class="section faq">
     <h3 class="section-header">Questions fréquentes</h3>
     <p>
-      <strong>Combien ça coûte ?</strong>
+      <strong>Combien cela coûte ?</strong>
       C'est gratuit pour les curieuses, les intéressées, les créatrices... :)
     </p>
     <p>
       <strong>Pour qui ?</strong>
       Les femmes de tous les âges, à l’aise avec l’outil informatique.
-      Aucune expérience Web ou de programmation n'est requise, nous avons tous les niveaux.
+      Aucune expérience de programmation n'est requise, nous avons tous les niveaux.
       Merci d'apporter votre ordinateur portable pour programmer !
     </p>
     <p>
       <strong>Il y a une sélection ?</strong>
-      Si nous atteignons le maximum de places ou qu'il y a plus de 4 ou 5 élèves par mentor,
+      Si nous atteignons le maximum de places ou qu'il y ait plus de 4 ou 5 élèves par mentor,
       nous nous réservons le droit de sélectionner : les femmes et les débutants d'abord :)
     </p>
     <p>
